<resources>
    <string name="app_name">Tema2</string>
    <string name="name">Name</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="add">Add</string>
    <string name="delete">Delete</string>
    <string name="view_students">View Students</string>
    <string name="mark">Mark</string>
    <string name="full_name">Full Name</string>
    <string name="ceva">Ceva</string>
    <string name="name_to_delete">Name to delete</string>
    <string name="mark_to_delete">Mark to delete</string>

</resources>
