<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity"
    >




    <Button
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="@string/add"
        android:id="@+id/add_button"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginLeft="100dp" />



    <EditText
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:hint="@string/full_name"
        android:id="@+id/name_text"
        android:inputType="textPersonName"
        app:layout_constraintStart_toStartOf="parent" />
    <EditText
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:hint="@string/mark"
        app:layout_constraintStart_toEndOf="@+id/name_text"
        android:id="@+id/mark_text"
        android:inputType="number"
     />
</androidx.constraintlayout.widget.ConstraintLayout>