<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".DeleteStudentFragment">

    <!-- TODO: Update blank fragment layout -->


    <EditText
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:hint="@string/name_to_delete"
        android:id="@+id/delete_name_text"
        android:inputType="textPersonName"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:layout_width="150dp"
        android:layout_height="50dp"
        android:layout_marginTop="60dp"
        android:hint="@string/mark_to_delete"
        app:layout_constraintStart_toEndOf="@+id/delete_name_text"
        android:id="@+id/delete_mark_text"
        android:inputType="number"
        />

    <Button
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="@string/delete"
        android:id="@+id/delete_button"
        android:layout_marginTop="300dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginLeft="100dp" />
</FrameLayout>